k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wlms
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:REGION:ACCOUNT_ID:certificate/REPLACE_WITH_CERTIFICATE_ID
spec:
  ingressClassName: alb
  rules:
    - host: wlms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wlms-frontend
                port:
                  number: 80
    - host: api.wlms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wlms-backend
                port:
                  number: 8000
